--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,13 @@ section h4
 .slider .indicators .indicator-item.active {
     background-color: #1a237e;
 }
+
+.slider .slides li img {
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+}
+
+#android .slides li img {
+    background-size: 44% auto;
+    background-repeat: no-repeat;
+}
